changed Race constructor